Layout | Deleted Redundant Navbar Elements & Fixed Alignment

--- a/src/styles/sass/components/layout/NavigationBar.module.scss
+++ b/src/styles/sass/components/layout/NavigationBar.module.scss
@@ -7,9 +7,16 @@
 }
 
 @mixin navbar {
+  display: flex;
+  justify-content: center;
   border-bottom: 2px solid $dark-1;
   background-color: $dark-3;
   box-shadow: rgba(0, 0, 0, 0.15) 0 15px 25px, rgba(0, 0, 0, 0.05) 0 5px 10px;
+}
+
+@mixin nav {
+  width: 100%;
+  padding: 0 15px;
 }
 
 @mixin toggle {
@@ -37,6 +44,11 @@
     height: $nav-phone-height;
   }
 
+  .nav {
+    @include nav;
+    max-width: 768px;
+  }
+
   .toggle {
     @include toggle;
     font-size: 2.4em;
@@ -58,6 +70,11 @@
     @include navbar;
     padding: 10px;
     height: $nav-tablet-height;
+  }
+
+  .nav {
+    @include nav;
+    max-width: 960px;
   }
 
   .toggle {
@@ -82,30 +99,11 @@
     padding: 15px;
     height: $nav-desktop-height;
   }
-}
 
-.nav {
-  width: 100%;
-}
-
-.row {
-  width: 100%;
-  display: flex;
-  align-items: center;
-}
-
-.innerWrapper {
-  max-width: 1200px;
-}
-
-.rightCol {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.leftCol {
-  display: flex;
-  justify-content: flex-start;
+  .nav {
+    @include nav;
+    max-width: 1140px;
+  }
 }
 
 .buttonWrapper {
@@ -119,11 +117,11 @@
 }
 
 .leftButtonWrapper > * {
-  margin: 0 1rem;
+  margin-right: 2rem;
 }
 
 .button {
-  padding: 0.35rem;
+  padding: 0.35rem 0 0.35rem 0.35rem;
 }
 
 .toggle:hover {
